--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 			<version>1.7.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jmolecules</groupId>
+			<artifactId>jmolecules-ddd</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.joda</groupId>
 			<artifactId>joda-money</artifactId>
 			<version>1.0.3</version>
