--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.konghq</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>3.13.11</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jmolecules</groupId>
 			<artifactId>jmolecules-hexagonal-architecture
 			</artifactId>
