--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,9 @@
 				<configuration>
 					<source>20</source>
 					<target>20</target>
-					<compilerArgs>--enable-preview
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+						<arg>-Xpkginfo:always</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
